src/app/common/components/app-prompt/app-prompt.component.ng.scss
@import 'defaults.scss';

:host {
  width: 100%;
  position: fixed;
  bottom: 0;

  @include z-index(popover--modal);

  .m-appPrompt__container {
    position: absolute;
    bottom: 0;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    font-size: 17px;
    font-weight: 500;
    cursor: pointer;
    // opacity: 0.8;
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;

    @include m-theme() {
      background-color: themed($m-bgColor--primaryInverted);
      color: themed($m-textColor--primaryInverted);
      border: 1px solid themed($m-borderColor--primary);
    }
  }

  .m-appPrompt__header {
    width: 100%;
    height: 50px;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 16px;

    .m-appPrompt__header__logo {
      width: 35px;
      height: 35px;
      margin-right: 16px;
    }

    .m-appPrompt__header__title {
      font-size: 20px;
      font-weight: 700;
    }

    .m-appPrompt__header__closeIcon {
      position: absolute;
      right: 16px;
      padding: 16px;
    }
  }

  .m-appPrompt__body {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    justify-content: center;
    margin-bottom: 50px;
    padding-top: 16px;

    .m-appPrompt__body__logoContainer {
      background-color: white;
      border-radius: 15px;
      padding: 10px;
      margin-bottom: 16px;
    }

    .m-appPrompt__body__logo {
      width: 100px;
      height: 100px;
    }

    .m-appPrompt__body__title {
      font-size: 30px;
      margin-bottom: 32px;
    }

    .m-appPrompt__body__description {
      margin-bottom: 16px;
      font-size: 20px;
      @include m-theme() {
        color: themed($m-textColor--tertiary);
      }
    }

    .m-appPrompt__body__reviews {
      margin-bottom: 16px;
      @include m-theme() {
        color: themed($m-textColor--tertiary);
      }
    }

    .m-appPrompt__body__downloadContainer {
      display: flex;
      flex-direction: column;
      padding-top: 32px;

      a:first-child {
        margin-bottom: 16px;
      }
    }
  }
}

