(fix) styling on ios devices

--- a/src/app/common/components/app-prompt/app-prompt.component.ng.scss
+++ b/src/app/common/components/app-prompt/app-prompt.component.ng.scss
@@ -10,10 +10,12 @@
   .m-appPrompt__container {
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     font-size: 17px;
     font-weight: 500;
     cursor: pointer;
